<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagen_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagen_parent"
        android:layout_marginStart="@dimen/margin_app"
        android:layout_marginTop="@dimen/margin_app"
        android:layout_marginBottom="@dimen/margin_app"
        android:text="@string/title_film_text"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"></TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_app"
        android:layout_marginLeft="@dimen/margin_app"
        android:text="@string/info_film_text"
        android:layout_below="@+id/textView"></TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/ic_bookmark"
        android:layout_below="@+id/imagen_parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"        android:background="@android:drawable/bottom_bar"
        android:text="@string/rent_price_film_text"
        android:textColor="@color/white"
        android:layout_toLeftOf="@+id/separate01"
        android:layout_below="@id/textView2"></androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/separate01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_app"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/buy_prince_film_text"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/separate01"
        android:layout_below="@id/textView2"></androidx.appcompat.widget.AppCompatButton>

    <View
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginTop="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@+id/appCompatButton" />

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/margin_app"
        android:layout_below="@id/view2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_weight="2"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_edit_24"
                    app:tint="@color/white" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ratings_text"
                    android:textAlignment="center"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_family"
                    app:tint="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/family_text"
                    android:textAlignment="center"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tomato"
                    app:tint="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/percentage_text"
                    android:textAlignment="center"></TextView>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/layout_width"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_similar"
                    app:tint="@color/white"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/similar_text"
                    android:textAlignment="center"></TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_marginLeft="@dimen/margin_app"
        android:layout_marginRight="@dimen/margin_app"
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@id/botones" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/description_size"
        android:layout_below="@id/botones"
        android:layout_margin="@dimen/margin_app"></TextView>

</RelativeLayout>