<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imagen_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:text="@string/title_film_text"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_parent"></TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:text="@string/info_film_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"></TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/ic_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/rent_price_film_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/separate01"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/separate01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:background="@android:drawable/bottom_bar"
        android:text="@string/buy_prince_film_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/separate01"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></androidx.appcompat.widget.AppCompatButton>

    <View
        android:layout_margin="@dimen/margin_app"
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/buttontext01"
        android:layout_width="@dimen/sice_text"
        android:layout_height="wrap_content"
        android:text="@string/ratings_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
        android:layout_marginTop="@dimen/margin_app"
        ></TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/ic_family"
        app:layout_constraintEnd_toStartOf="@+id/separate02"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/buttontext02"
        android:layout_width="@dimen/sice_text"
        android:layout_height="wrap_content"
        android:text="@string/family_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2"
        android:layout_marginTop="@dimen/margin_app"></TextView>

    <TextView
        android:id="@+id/separate02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"></TextView>

    <TextView
        android:id="@+id/separate03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_app"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separate02"></TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/tomato"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/separate02"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_app"
        android:src="@drawable/ic_similar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/buttontext04"
        android:layout_width="@dimen/sice_text"
        android:layout_height="wrap_content"
        android:text="@string/similar_text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton4"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton4"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton4"
        android:layout_marginTop="@dimen/margin_app"></TextView>

    <TextView
        android:id="@+id/buttontext03"
        android:layout_width="@dimen/sice_text"
        android:layout_height="wrap_content"
        android:text="@string/percentage_text"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_app"
        app:layout_constraintEnd_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintStart_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton3"></TextView>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/margin_app"
        android:background="@color/gray_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttontext01" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="@dimen/description_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:layout_margin="@dimen/margin_app"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>